Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -35,3 +35,5 @@ exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
 gems: [jekyll-paginate, jekyll-feed]
 # Build settings
+
+theme: jekyll-theme-cayman
