--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,30 @@
 # Site settings
-title: Antonio Trento, theme Jeky New Age, the start Bootstrap themplate build for jekyll
-email:
-description: A jekyll template for landing pages, portfolio and blogging
+title: Repositori Kodesumber Terbuka SIF
+email: kampar@gmail.com
+description: Repositori kodesumber terbuka program studi S1 Sistem Informasi, Fakultas Sains dan Teknologi, UIN Suska Riau
 
 baseurl: "" # the subpath of your site, e.g. /blog/ (If you use organization leave empty)
-url: "https://jekynewage.github.io" # the base hostname & protocol for your site
+url: "https://sifsuska.github.io" # the base hostname & protocol for your site
 
-#Google Ad Words Data from scripts code (using Google responsive options) and ad client
-data-ad-slot: 2973388149
-data-ad-client: ca-pub-9204963049240271
-google_ad_client: ca-pub-9204963049240271
-
-google_analytics: "UA-86331249-1"
-addthis_id: ra-5644da281510c62f
-disqus_account: jeky-new-age
+##Google Ad Words Data from scripts code (using Google responsive options) and ad client
+#data-ad-slot: 2973388149
+#data-ad-client: ca-pub-9204963049240271
+#google_ad_client: ca-pub-9204963049240271
+#
+#google_analytics: "UA-86331249-1"
+#addthis_id: ra-5644da281510c62f
+#disqus_account: jeky-new-age
 
 # Social networks usernames (many more available: flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.) see all icon at fontawesome.io
 social:
-  - title: twitter
-    url: https://twitter.com/lantoniotrento
+  #- title: twitter
+  #  url: https://twitter.com/lantoniotrento
   - title: facebook
-    url: https://facebook.com/lantoniotrento
-  - title: google-plus
-    url: https://plus.google.com/+AntoniotrentoIt
-  #- title: github
-  #  url: http://github.com/jekyll
+    url: https://www.facebook.com/SIUINSUSKARIAU
+  #- title: google-plus
+  #  url: https://plus.google.com/+AntoniotrentoIt
+  - title: github
+    url: http://github.com/sifsuska
 
 # Build settings
 markdown: kramdown
